discordcount-api/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: discordcount-api-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - api.discordcount.me
    secretName: discordcount-prod-letsencrypt
  rules:
  - host: api.discordcount.me
    http:
      paths:
      - path: /
        backend:
          serviceName: discordcount-api
          servicePort: 8000
